--- a/DigiCert/src/main/resources/application.properties
+++ b/DigiCert/src/main/resources/application.properties
@@ -2,23 +2,26 @@ server.port=9090
 
 
 
+#h2 datasource setting
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=test
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/digicert
-spring.datasource.username=root
-spring.datasource.password=password
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL55Dialect
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=none
+#jpa setting
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+#h2 console path
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2
 
 #flyway configuration
 spring.flyway.baseline-on-migrate=true
-spring.flyway.user=root
-spring.flyway.password=password
+spring.flyway.user=sa
+spring.flyway.password=test
 spring.flyway.schemas=digicert
-spring.flyway.url=jdbc:mysql://localhost:3306/digicert
+spring.flyway.url=jdbc:h2:mem:testdb
 spring.flyway.locations=classpath:sql-scripts
 
